; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/ext3/extr_inode.c_start_transaction.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/ext3/extr_inode.c_start_transaction.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.inode*)* @start_transaction to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @start_transaction(%struct.inode* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.inode*, align 8
  %4 = alloca i32*, align 8
  store %struct.inode* %0, %struct.inode** %3, align 8
  %5 = load %struct.inode*, %struct.inode** %3, align 8
  %6 = load %struct.inode*, %struct.inode** %3, align 8
  %7 = call i32 @blocks_for_truncate(%struct.inode* %6)
  %8 = call i32* @ext3_journal_start(%struct.inode* %5, i32 %7)
  store i32* %8, i32** %4, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call i32 @IS_ERR(i32* %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %14, label %12

12:                                               ; preds = %1
  %13 = load i32*, i32** %4, align 8
  store i32* %13, i32** %2, align 8
  br label %22

14:                                               ; preds = %1
  %15 = load %struct.inode*, %struct.inode** %3, align 8
  %16 = getelementptr inbounds %struct.inode, %struct.inode* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32*, i32** %4, align 8
  %19 = call i32 @PTR_ERR(i32* %18)
  %20 = call i32 @ext3_std_error(i32 %17, i32 %19)
  %21 = load i32*, i32** %4, align 8
  store i32* %21, i32** %2, align 8
  br label %22

22:                                               ; preds = %14, %12
  %23 = load i32*, i32** %2, align 8
  ret i32* %23
}

declare dso_local i32* @ext3_journal_start(%struct.inode*, i32) #1

declare dso_local i32 @blocks_for_truncate(%struct.inode*) #1

declare dso_local i32 @IS_ERR(i32*) #1

declare dso_local i32 @ext3_std_error(i32, i32) #1

declare dso_local i32 @PTR_ERR(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
